--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "ngx-month-year-selector-demo",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "build:lib": "ng build ngx-month-year-selector",
     "watch:lib": "ng build ngx-month-year-selector --watch",
+    "package:lib": "cd dist/ngx-month-year-selector && npm pack",
+    "package": "npm run build:lib && npm run package:lib",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/crankedapps/ngx-month-year-selector.git"
   },
   "private": true,
   "dependencies": {
