--- a/projects/ngx-month-year-selector/package.json
+++ b/projects/ngx-month-year-selector/package.json
@@ -1,8 +1,13 @@
 {
   "name": "ngx-month-year-selector",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/crankedapps/ngx-month-year-selector.git"
+  },
   "peerDependencies": {
     "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/core": "^6.0.0-rc.0 || ^6.0.0"
+    "@angular/core": "^6.0.0-rc.0 || ^6.0.0",
+    "@angular/forms": "^6.0.0-rc.0 || ^6.0.0"
   }
 }
