--- a/projects/ngx-month-year-selector/package.json
+++ b/projects/ngx-month-year-selector/package.json
@@ -1,10 +1,18 @@
 {
   "name": "ngx-month-year-selector",
   "version": "1.0.0",
+  "author": {
+    "name": "John Endicott",
+    "email": "john@crankedapps.com"
+  },
   "repository": {
     "type" : "git",
     "url" : "https://github.com/crankedapps/ngx-month-year-selector.git"
   },
+  "bugs": {
+    "url": "https://github.com/manishjanky/ngx-select-dropdown/issues"
+  },
+  "homepage": "https://github.com/crankedapps/ngx-month-year-selector#readme",
   "peerDependencies": {
     "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
     "@angular/core": "^6.0.0-rc.0 || ^6.0.0",
