--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "date-year-selector": {
+    "ngx-month-year-selector-demo": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/date-year-selector",
+            "outputPath": "dist/ngx-month-year-selector-demo",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -54,18 +54,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "date-year-selector:build"
+            "browserTarget": "ngx-month-year-selector-demo:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "date-year-selector:build:production"
+              "browserTarget": "ngx-month-year-selector-demo:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "date-year-selector:build"
+            "browserTarget": "ngx-month-year-selector-demo:build"
           }
         },
         "test": {
@@ -99,7 +99,7 @@
         }
       }
     },
-    "date-year-selector-e2e": {
+    "ngx-month-year-selector-demo-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "targets": {
@@ -107,11 +107,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "date-year-selector:serve"
+            "devServerTarget": "ngx-month-year-selector-demo:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "date-year-selector:serve:production"
+              "devServerTarget": "ngx-month-year-selector-demo:serve:production"
             }
           }
         },
@@ -162,5 +162,5 @@
       }
     }
   },
-  "defaultProject": "date-year-selector"
+  "defaultProject": "ngx-month-year-selector-demo"
 }
