--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/crankedapps/ngx-month-year-selector.git"
   },
   "bugs": {
-    "url": "https://github.com/manishjanky/ngx-select-dropdown/issues"
+    "url": "https://github.com/crankedapps/ngx-month-year-selector.git"
   },
   "homepage": "https://github.com/crankedapps/ngx-month-year-selector#readme",
   "scripts": {
